--- a/AI_chatbot_using_PaLM-/pipinstall.ipynb
+++ b/AI_chatbot_using_PaLM-/pipinstall.ipynb
@@ -20,7 +20,7 @@
       "Requirement already satisfied: requests<3.0.0.dev0,>=2.18.0 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from google-api-core->google.generativeai) (2.31.0)\n",
       "Requirement already satisfied: cachetools<6.0,>=2.0.0 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from google-auth->google.generativeai) (5.3.2)\n",
       "Requirement already satisfied: pyasn1-modules>=0.2.1 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from google-auth->google.generativeai) (0.3.0)\n",
-      "Requirement already satisfied: rsa<5,>=3.1.4 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from google-auth->google.generativeai) (4.9)\n",
+      "Requirement already satisfied: rsa<5,>=3.1.4 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from google-auth->google.generativeai) (4.7.2)\n",
       "Requirement already satisfied: grpcio<2.0dev,>=1.33.2 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from google-api-core->google.generativeai) (1.60.0)\n",
       "Requirement already satisfied: grpcio-status<2.0.dev0,>=1.33.2 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from google-api-core->google.generativeai) (1.60.0)\n",
       "Requirement already satisfied: pyasn1<0.6.0,>=0.4.6 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from pyasn1-modules>=0.2.1->google-auth->google.generativeai) (0.5.1)\n",
@@ -29,7 +29,7 @@
       "Requirement already satisfied: urllib3<3,>=1.21.1 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from requests<3.0.0.dev0,>=2.18.0->google-api-core->google.generativeai) (2.0.2)\n",
       "Requirement already satisfied: certifi>=2017.4.17 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from requests<3.0.0.dev0,>=2.18.0->google-api-core->google.generativeai) (2023.5.7)\n",
       "\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip available: \u001b[0m\u001b[31;49m22.3.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m23.3.1\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip available: \u001b[0m\u001b[31;49m22.3.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m24.0\u001b[0m\n",
       "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip3 install --upgrade pip\u001b[0m\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
@@ -61,7 +61,7 @@
       "Requirement already satisfied: blinker>=1.6.2 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from flask) (1.7.0)\n",
       "Requirement already satisfied: MarkupSafe>=2.0 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from Jinja2>=3.1.2->flask) (2.1.3)\n",
       "\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip available: \u001b[0m\u001b[31;49m22.3.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m23.3.1\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip available: \u001b[0m\u001b[31;49m22.3.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m24.0\u001b[0m\n",
       "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip3 install --upgrade pip\u001b[0m\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
@@ -80,97 +80,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting dotenv\n",
-      "  Using cached dotenv-0.0.5.tar.gz (2.4 kB)\n",
-      "  Preparing metadata (setup.py) ... \u001b[?25lerror\n",
-      "  \u001b[1;31merror\u001b[0m: \u001b[1msubprocess-exited-with-error\u001b[0m\n",
-      "  \n",
-      "  \u001b[31m×\u001b[0m \u001b[32mpython setup.py egg_info\u001b[0m did not run successfully.\n",
-      "  \u001b[31m│\u001b[0m exit code: \u001b[1;36m1\u001b[0m\n",
-      "  \u001b[31m╰─>\u001b[0m \u001b[31m[71 lines of output]\u001b[0m\n",
-      "  \u001b[31m   \u001b[0m /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/setuptools/installer.py:27: SetuptoolsDeprecationWarning: setuptools.installer is deprecated. Requirements should be satisfied by a PEP 517 installer.\n",
-      "  \u001b[31m   \u001b[0m   warnings.warn(\n",
-      "  \u001b[31m   \u001b[0m WARNING: The wheel package is not available.\n",
-      "  \u001b[31m   \u001b[0m   error: subprocess-exited-with-error\n",
-      "  \u001b[31m   \u001b[0m \n",
-      "  \u001b[31m   \u001b[0m   × python setup.py egg_info did not run successfully.\n",
-      "  \u001b[31m   \u001b[0m   │ exit code: 1\n",
-      "  \u001b[31m   \u001b[0m   ╰─> [17 lines of output]\n",
-      "  \u001b[31m   \u001b[0m       Traceback (most recent call last):\n",
-      "  \u001b[31m   \u001b[0m         File \"<string>\", line 2, in <module>\n",
-      "  \u001b[31m   \u001b[0m         File \"<pip-setuptools-caller>\", line 14, in <module>\n",
-      "  \u001b[31m   \u001b[0m         File \"/private/var/folders/vw/fd428h6s3qlck35n_13x5ddm0000gn/T/pip-wheel-jo0c3stt/distribute_f8370c99868240118e3cab2ecd145ff1/setuptools/__init__.py\", line 2, in <module>\n",
-      "  \u001b[31m   \u001b[0m           from setuptools.extension import Extension, Library\n",
-      "  \u001b[31m   \u001b[0m         File \"/private/var/folders/vw/fd428h6s3qlck35n_13x5ddm0000gn/T/pip-wheel-jo0c3stt/distribute_f8370c99868240118e3cab2ecd145ff1/setuptools/extension.py\", line 5, in <module>\n",
-      "  \u001b[31m   \u001b[0m           from setuptools.dist import _get_unpatched\n",
-      "  \u001b[31m   \u001b[0m         File \"/private/var/folders/vw/fd428h6s3qlck35n_13x5ddm0000gn/T/pip-wheel-jo0c3stt/distribute_f8370c99868240118e3cab2ecd145ff1/setuptools/dist.py\", line 7, in <module>\n",
-      "  \u001b[31m   \u001b[0m           from setuptools.command.install import install\n",
-      "  \u001b[31m   \u001b[0m         File \"/private/var/folders/vw/fd428h6s3qlck35n_13x5ddm0000gn/T/pip-wheel-jo0c3stt/distribute_f8370c99868240118e3cab2ecd145ff1/setuptools/command/__init__.py\", line 8, in <module>\n",
-      "  \u001b[31m   \u001b[0m           from setuptools.command import install_scripts\n",
-      "  \u001b[31m   \u001b[0m         File \"/private/var/folders/vw/fd428h6s3qlck35n_13x5ddm0000gn/T/pip-wheel-jo0c3stt/distribute_f8370c99868240118e3cab2ecd145ff1/setuptools/command/install_scripts.py\", line 3, in <module>\n",
-      "  \u001b[31m   \u001b[0m           from pkg_resources import Distribution, PathMetadata, ensure_directory\n",
-      "  \u001b[31m   \u001b[0m         File \"/private/var/folders/vw/fd428h6s3qlck35n_13x5ddm0000gn/T/pip-wheel-jo0c3stt/distribute_f8370c99868240118e3cab2ecd145ff1/pkg_resources.py\", line 1518, in <module>\n",
-      "  \u001b[31m   \u001b[0m           register_loader_type(importlib_bootstrap.SourceFileLoader, DefaultProvider)\n",
-      "  \u001b[31m   \u001b[0m                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  \u001b[31m   \u001b[0m       AttributeError: module 'importlib._bootstrap' has no attribute 'SourceFileLoader'\n",
-      "  \u001b[31m   \u001b[0m       [end of output]\n",
-      "  \u001b[31m   \u001b[0m \n",
-      "  \u001b[31m   \u001b[0m   note: This error originates from a subprocess, and is likely not a problem with pip.\n",
-      "  \u001b[31m   \u001b[0m error: metadata-generation-failed\n",
-      "  \u001b[31m   \u001b[0m \n",
-      "  \u001b[31m   \u001b[0m × Encountered error while generating package metadata.\n",
-      "  \u001b[31m   \u001b[0m ╰─> See above for output.\n",
-      "  \u001b[31m   \u001b[0m \n",
-      "  \u001b[31m   \u001b[0m note: This is an issue with the package mentioned above, not pip.\n",
-      "  \u001b[31m   \u001b[0m hint: See above for details.\n",
-      "  \u001b[31m   \u001b[0m Traceback (most recent call last):\n",
-      "  \u001b[31m   \u001b[0m   File \"/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/setuptools/installer.py\", line 82, in fetch_build_egg\n",
-      "  \u001b[31m   \u001b[0m     subprocess.check_call(cmd)\n",
-      "  \u001b[31m   \u001b[0m   File \"/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/subprocess.py\", line 413, in check_call\n",
-      "  \u001b[31m   \u001b[0m     raise CalledProcessError(retcode, cmd)\n",
-      "  \u001b[31m   \u001b[0m subprocess.CalledProcessError: Command '['/usr/local/bin/python3', '-m', 'pip', '--disable-pip-version-check', 'wheel', '--no-deps', '-w', '/var/folders/vw/fd428h6s3qlck35n_13x5ddm0000gn/T/tmpi8sw4bzd', '--quiet', 'distribute']' returned non-zero exit status 1.\n",
-      "  \u001b[31m   \u001b[0m \n",
-      "  \u001b[31m   \u001b[0m The above exception was the direct cause of the following exception:\n",
-      "  \u001b[31m   \u001b[0m \n",
-      "  \u001b[31m   \u001b[0m Traceback (most recent call last):\n",
-      "  \u001b[31m   \u001b[0m   File \"<string>\", line 2, in <module>\n",
-      "  \u001b[31m   \u001b[0m   File \"<pip-setuptools-caller>\", line 34, in <module>\n",
-      "  \u001b[31m   \u001b[0m   File \"/private/var/folders/vw/fd428h6s3qlck35n_13x5ddm0000gn/T/pip-install-feq_hbjf/dotenv_bac84a6c10c74ae58db933d26a6d294c/setup.py\", line 13, in <module>\n",
-      "  \u001b[31m   \u001b[0m     setup(name='dotenv',\n",
-      "  \u001b[31m   \u001b[0m   File \"/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/setuptools/__init__.py\", line 86, in setup\n",
-      "  \u001b[31m   \u001b[0m     _install_setup_requires(attrs)\n",
-      "  \u001b[31m   \u001b[0m   File \"/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/setuptools/__init__.py\", line 80, in _install_setup_requires\n",
-      "  \u001b[31m   \u001b[0m     dist.fetch_build_eggs(dist.setup_requires)\n",
-      "  \u001b[31m   \u001b[0m   File \"/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/setuptools/dist.py\", line 875, in fetch_build_eggs\n",
-      "  \u001b[31m   \u001b[0m     resolved_dists = pkg_resources.working_set.resolve(\n",
-      "  \u001b[31m   \u001b[0m                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  \u001b[31m   \u001b[0m   File \"/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/pkg_resources/__init__.py\", line 789, in resolve\n",
-      "  \u001b[31m   \u001b[0m     dist = best[req.key] = env.best_match(\n",
-      "  \u001b[31m   \u001b[0m                            ^^^^^^^^^^^^^^^\n",
-      "  \u001b[31m   \u001b[0m   File \"/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/pkg_resources/__init__.py\", line 1075, in best_match\n",
-      "  \u001b[31m   \u001b[0m     return self.obtain(req, installer)\n",
-      "  \u001b[31m   \u001b[0m            ^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  \u001b[31m   \u001b[0m   File \"/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/pkg_resources/__init__.py\", line 1087, in obtain\n",
-      "  \u001b[31m   \u001b[0m     return installer(requirement)\n",
-      "  \u001b[31m   \u001b[0m            ^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  \u001b[31m   \u001b[0m   File \"/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/setuptools/dist.py\", line 945, in fetch_build_egg\n",
-      "  \u001b[31m   \u001b[0m     return fetch_build_egg(self, req)\n",
-      "  \u001b[31m   \u001b[0m            ^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  \u001b[31m   \u001b[0m   File \"/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/setuptools/installer.py\", line 84, in fetch_build_egg\n",
-      "  \u001b[31m   \u001b[0m     raise DistutilsError(str(e)) from e\n",
-      "  \u001b[31m   \u001b[0m distutils.errors.DistutilsError: Command '['/usr/local/bin/python3', '-m', 'pip', '--disable-pip-version-check', 'wheel', '--no-deps', '-w', '/var/folders/vw/fd428h6s3qlck35n_13x5ddm0000gn/T/tmpi8sw4bzd', '--quiet', 'distribute']' returned non-zero exit status 1.\n",
-      "  \u001b[31m   \u001b[0m \u001b[31m[end of output]\u001b[0m\n",
-      "  \n",
-      "  \u001b[1;35mnote\u001b[0m: This error originates from a subprocess, and is likely not a problem with pip.\n",
-      "\u001b[?25h\u001b[1;31merror\u001b[0m: \u001b[1mmetadata-generation-failed\u001b[0m\n",
-      "\n",
-      "\u001b[31m×\u001b[0m Encountered error while generating package metadata.\n",
-      "\u001b[31m╰─>\u001b[0m See above for output.\n",
-      "\n",
-      "\u001b[1;35mnote\u001b[0m: This is an issue with the package mentioned above, not pip.\n",
-      "\u001b[1;36mhint\u001b[0m: See above for details.\n",
-      "\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip available: \u001b[0m\u001b[31;49m22.3.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m23.3.1\u001b[0m\n",
+      "\u001b[33mWARNING: Retrying (Retry(total=4, connect=None, read=None, redirect=None, status=None)) after connection broken by 'NewConnectionError('<pip._vendor.urllib3.connection.HTTPSConnection object at 0x103500d90>: Failed to establish a new connection: [Errno 8] nodename nor servname provided, or not known')': /simple/dotenv/\u001b[0m\u001b[33m\n",
+      "\u001b[0m\u001b[33mWARNING: Retrying (Retry(total=3, connect=None, read=None, redirect=None, status=None)) after connection broken by 'NewConnectionError('<pip._vendor.urllib3.connection.HTTPSConnection object at 0x1035c0850>: Failed to establish a new connection: [Errno 8] nodename nor servname provided, or not known')': /simple/dotenv/\u001b[0m\u001b[33m\n",
+      "\u001b[0m\u001b[33mWARNING: Retrying (Retry(total=2, connect=None, read=None, redirect=None, status=None)) after connection broken by 'NewConnectionError('<pip._vendor.urllib3.connection.HTTPSConnection object at 0x1035c3210>: Failed to establish a new connection: [Errno 8] nodename nor servname provided, or not known')': /simple/dotenv/\u001b[0m\u001b[33m\n",
+      "\u001b[0m\u001b[33mWARNING: Retrying (Retry(total=1, connect=None, read=None, redirect=None, status=None)) after connection broken by 'NewConnectionError('<pip._vendor.urllib3.connection.HTTPSConnection object at 0x1035de710>: Failed to establish a new connection: [Errno 8] nodename nor servname provided, or not known')': /simple/dotenv/\u001b[0m\u001b[33m\n",
+      "\u001b[0m\u001b[33mWARNING: Retrying (Retry(total=0, connect=None, read=None, redirect=None, status=None)) after connection broken by 'NewConnectionError('<pip._vendor.urllib3.connection.HTTPSConnection object at 0x1035df450>: Failed to establish a new connection: [Errno 8] nodename nor servname provided, or not known')': /simple/dotenv/\u001b[0m\u001b[33m\n",
+      "\u001b[0m\u001b[31mERROR: Could not find a version that satisfies the requirement dotenv (from versions: none)\u001b[0m\u001b[31m\n",
+      "\u001b[0m\u001b[31mERROR: No matching distribution found for dotenv\u001b[0m\u001b[31m\n",
+      "\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip available: \u001b[0m\u001b[31;49m22.3.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m24.0\u001b[0m\n",
       "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip3 install --upgrade pip\u001b[0m\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
